--- a/Playground/test-output/old/Suite/methods-not-run.html
+++ b/Playground/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>playground.primaClasa.class1method3</td></tr>
+<tr><td>playground.primaClasa.class1method2</td></tr>
+<tr><td>playground.primaClasa.class1method4</td></tr>
+<tr><td>playground.aDouaClasa.class2method3</td></tr>
+<tr><td>playground.aDouaClasa.class2method1</td></tr>
 </table>
