--- a/Playground/test-output/emailable-report.html
+++ b/Playground/test-output/emailable-report.html
@@ -8,25 +8,46 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Prima Clasa </a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">59</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Clasa a doua</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20</td><td></td><td></td></tr>
-<tr><td><a href="#t2">rest of the classes</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">10</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">123</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">113</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Prima Clasa  &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">playground.primaClasa</td><td><a href="#m0">class1method1</a></td><td rowspan="1">1584708318777</td><td rowspan="1">11</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Clasa a doua &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">playground.aDouaClasa</td><td><a href="#m1">class2method4</a></td><td rowspan="1">1584708318879</td><td rowspan="1">3</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">rest of the classes &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">playground.aPatraClasa</td><td><a href="#m2">class4method1</a></td><td rowspan="1">1584708318931</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">class4method2</a></td><td rowspan="1">1584708318934</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">class4method3</a></td><td rowspan="1">1584708318942</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">class4method4</a></td><td rowspan="1">1584708318948</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="4">playground.aTreiaClasa</td><td><a href="#m6">class3method1</a></td><td rowspan="1">1584708318916</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m7">class3method2</a></td><td rowspan="1">1584708318919</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m8">class3method3</a></td><td rowspan="1">1584708318922</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m9">class3method4</a></td><td rowspan="1">1584708318924</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">playground.primaClasa</td><td><a href="#m0">class1method2</a></td><td rowspan="1">1584712839912</td><td rowspan="1">0</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">playground.primaClasa</td><td><a href="#m1">class1method1</a></td><td rowspan="1">1584712839888</td><td rowspan="1">12</td></tr><tr class="passedeven"><td><a href="#m2">class1method3</a></td><td rowspan="3">1584712839935</td><td rowspan="3">1</td></tr><tr class="passedeven"><td><a href="#m3">class1method3</a></td></tr><tr class="passedeven"><td><a href="#m4">class1method3</a></td></tr><tr class="passedeven"><td><a href="#m5">class1method4</a></td><td rowspan="1">1584712839947</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Prima Clasa </h2><h3 id="m0">playground.primaClasa#class1method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Clasa a doua</h2><h3 id="m1">playground.aDouaClasa#class2method4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Shelvetica.org</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>rest of the classes</h2><h3 id="m2">playground.aPatraClasa#class4method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">playground.aPatraClasa#class4method2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">playground.aPatraClasa#class4method3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">playground.aPatraClasa#class4method4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">playground.aTreiaClasa#class3method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">playground.aTreiaClasa#class3method2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">playground.aTreiaClasa#class3method3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">playground.aTreiaClasa#class3method4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">playground.primaClasa#class1method2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;test&apos; is required by @Test on method class1method2 but has not been marked @Optional or defined
+in C:\Users\Florin\AppData\Local\Temp\testng-eclipse-349595345\testng-customsuite.xml
+	at org.testng.internal.Parameters.createParams(Parameters.java:289)
+	at org.testng.internal.Parameters.createParametersForMethod(Parameters.java:377)
+	at org.testng.internal.Parameters.createParameters(Parameters.java:721)
+	at org.testng.internal.Parameters.handleParameters(Parameters.java:895)
+	at org.testng.internal.Parameters.handleParameters(Parameters.java:762)
+	at org.testng.internal.ParameterHandler.handleParameters(ParameterHandler.java:60)
+	at org.testng.internal.ParameterHandler.createParameters(ParameterHandler.java:39)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:771)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:145)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.util.ArrayList.forEach(Unknown Source)
+	at org.testng.TestRunner.privateRun(TestRunner.java:770)
+	at org.testng.TestRunner.run(TestRunner.java:591)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:402)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:396)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:355)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:304)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1180)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1102)
+	at org.testng.TestNG.runSuites(TestNG.java:1032)
+	at org.testng.TestNG.run(TestNG.java:1000)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">playground.primaClasa#class1method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>2ndUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>firstUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>3rdUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">playground.primaClasa#class1method4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
