--- a/Playground/test-output/old/Suite/methods.html
+++ b/Playground/test-output/old/Suite/methods.html
@@ -1,50 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>0</td> <td title="&gt;&gt;primaClasa.BFsuite()[pri:0, instance:playground.primaClasa@3632be31]">&gt;&gt;BFsuite</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>0</td> <td title="&gt;&gt;primaClasa.BFsuite()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;BFsuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>11</td> <td>&nbsp;</td><td title="&gt;&gt;primaClasa.MethodBefore()[pri:0, instance:playground.primaClasa@3632be31]">&gt;&gt;MethodBefore</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>14</td> <td>&nbsp;</td><td title="&gt;&gt;primaClasa.MethodBefore()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;MethodBefore</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;primaClasa.Before()[pri:0, instance:playground.primaClasa@3632be31]">&gt;&gt;Before</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;primaClasa.Before()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;Before</td> 
 <td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="primaClasa.class1method1()[pri:0, instance:playground.primaClasa@3632be31]">class1method1</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="primaClasa.class1method1()[pri:0, instance:playground.primaClasa@2286778]">class1method1</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;primaClasa.After()[pri:0, instance:playground.primaClasa@3632be31]">&lt;&lt;After</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>87</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;primaClasa.After()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;After</td> 
 <td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>65</td> <td>&nbsp;</td><td title="&lt;&lt;primaClasa.methodAfter()[pri:0, instance:playground.primaClasa@3632be31]">&lt;&lt;methodAfter</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;primaClasa.Before()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;Before</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="primaClasa.class1method2(java.lang.String, java.lang.String)[pri:0, instance:playground.primaClasa@2286778]">class1method2</td> 
+  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;primaClasa.After()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;After</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;primaClasa.Before()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;Before</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="primaClasa.class1method3()[pri:0, instance:playground.primaClasa@2286778]">class1method3</td> 
+  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;primaClasa.After()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;After</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;primaClasa.Before()[pri:0, instance:playground.primaClasa@2286778]">&gt;&gt;Before</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="primaClasa.class1method4()[pri:0, instance:playground.primaClasa@2286778]">class1method4</td> 
+  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;primaClasa.After()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;After</td> 
+<td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>160</td> <td>&nbsp;</td><td title="&lt;&lt;primaClasa.methodAfter()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;methodAfter</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/03/20 14:45:18</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aDouaClasa.class2method4(java.lang.String)[pri:0, instance:playground.aDouaClasa@5bc79255]">class2method4</td> 
+<tr bgcolor="ac637b">  <td>20/03/20 14:59:30</td>   <td>244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aDouaClasa.class2method4(java.lang.String)[pri:0, instance:playground.aDouaClasa@23e028a9]">class2method4</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/03/20 14:45:18</td>   <td>157</td> <td>&nbsp;</td><td title="&lt;&lt;aDouaClasa.methodAfter()[pri:0, instance:playground.aDouaClasa@5bc79255]">&lt;&lt;methodAfter</td> 
+<tr bgcolor="ac637b">  <td>20/03/20 14:59:30</td>   <td>248</td> <td>&nbsp;</td><td title="&lt;&lt;aDouaClasa.methodAfter()[pri:0, instance:playground.aDouaClasa@23e028a9]">&lt;&lt;methodAfter</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>176</td> <td>&nbsp;</td><td title="&gt;&gt;aPatraClasa.methodBefore()[pri:0, instance:playground.aPatraClasa@551aa95a]">&gt;&gt;methodBefore</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>283</td> <td>&nbsp;</td><td title="&gt;&gt;aPatraClasa.methodBefore()[pri:0, instance:playground.aPatraClasa@551aa95a]">&gt;&gt;methodBefore</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>177</td> <td>&nbsp;</td><td title="&gt;&gt;aTreiaClasa.methodBefore()[pri:0, instance:playground.aTreiaClasa@578486a3]">&gt;&gt;methodBefore</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>284</td> <td>&nbsp;</td><td title="&gt;&gt;aTreiaClasa.methodBefore()[pri:0, instance:playground.aTreiaClasa@578486a3]">&gt;&gt;methodBefore</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method1()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method1</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method1()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method1</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method2()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method2</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method2()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method2</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method3()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method3</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method3()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method3</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method4()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method4</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aTreiaClasa.class3method4()[pri:0, instance:playground.aTreiaClasa@578486a3]">class3method4</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>192</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;aPatraClasa.beforeClass()[pri:0, instance:playground.aPatraClasa@551aa95a]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>307</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;aPatraClasa.beforeClass()[pri:0, instance:playground.aPatraClasa@551aa95a]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method1()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method1</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method1()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method1</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method2()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method2</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method2()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method2</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method3()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method3</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method3()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method3</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method4()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method4</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="aPatraClasa.class4method4()[pri:0, instance:playground.aPatraClasa@551aa95a]">class4method4</td> 
   <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;aPatraClasa.afterClass()[pri:0, instance:playground.aPatraClasa@551aa95a]">&lt;&lt;afterClass</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>318</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;aPatraClasa.afterClass()[pri:0, instance:playground.aPatraClasa@551aa95a]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>20/03/20 14:45:18</td>   <td>218</td> <td>&nbsp;</td><td title="&lt;&lt;aPatraClasa.methodAfter()[pri:0, instance:playground.aPatraClasa@551aa95a]">&lt;&lt;methodAfter</td> 
+<tr bgcolor="b58980">  <td>20/03/20 14:59:30</td>   <td>318</td> <td>&nbsp;</td><td title="&lt;&lt;aPatraClasa.methodAfter()[pri:0, instance:playground.aPatraClasa@551aa95a]">&lt;&lt;methodAfter</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>20/03/20 14:45:18</td>   <td>219</td> <td>&nbsp;</td><td title="&lt;&lt;aTreiaClasa.methodAfter()[pri:0, instance:playground.aTreiaClasa@578486a3]">&lt;&lt;methodAfter</td> 
+<tr bgcolor="75b1fb">  <td>20/03/20 14:59:30</td>   <td>319</td> <td>&nbsp;</td><td title="&lt;&lt;aTreiaClasa.methodAfter()[pri:0, instance:playground.aTreiaClasa@578486a3]">&lt;&lt;methodAfter</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>20/03/20 14:45:18</td>   <td>229</td> <td title="&lt;&lt;primaClasa.AFsuite()[pri:0, instance:playground.primaClasa@3632be31]">&lt;&lt;AFsuite</td> 
+<tr bgcolor="c285f4">  <td>20/03/20 14:59:30</td>   <td>344</td> <td title="&lt;&lt;primaClasa.AFsuite()[pri:0, instance:playground.primaClasa@2286778]">&lt;&lt;AFsuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1071097621</td>   <td></td> </tr>
 </table>
