--- a/Playground/test-output/old/Suite/classes.html
+++ b/Playground/test-output/old/Suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>class2method2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>class2method3</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -120,11 +124,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>class1method4</td>
+<td>class1method2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>class1method2</td>
+<td>class1method4</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
