--- a/Playground/test-output/old/Suite/toc.html
+++ b/Playground/test-output/old/Suite/toc.html
@@ -10,19 +10,19 @@
 <tr valign='top'>
 <td>3 tests</td>
 <td><a target='mainFrame' href='classes.html'>4 classes</a></td>
-<td>10 methods:<br/>
+<td>14 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (5)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>1 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Clasa a doua (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Clasa a doua (1/1/0)</td><td valign='top' align='right'>
   <a href='Clasa a doua.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -30,7 +30,7 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Prima Clasa  (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Prima Clasa  (4/0/0)</td><td valign='top' align='right'>
   <a href='Prima Clasa .html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
