--- a/Playground/test-output/emailable-report.html
+++ b/Playground/test-output/emailable-report.html
@@ -8,46 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">113</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">All the classes</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">128</td><td>smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">playground.primaClasa</td><td><a href="#m0">class1method2</a></td><td rowspan="1">1584712839912</td><td rowspan="1">0</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">playground.primaClasa</td><td><a href="#m1">class1method1</a></td><td rowspan="1">1584712839888</td><td rowspan="1">12</td></tr><tr class="passedeven"><td><a href="#m2">class1method3</a></td><td rowspan="3">1584712839935</td><td rowspan="3">1</td></tr><tr class="passedeven"><td><a href="#m3">class1method3</a></td></tr><tr class="passedeven"><td><a href="#m4">class1method3</a></td></tr><tr class="passedeven"><td><a href="#m5">class1method4</a></td><td rowspan="1">1584712839947</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">All the classes &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">playground.FirstClass</td><td><a href="#m0">class1method1</a></td><td rowspan="1">1584961801469</td><td rowspan="1">10</td></tr><tr><th colspan="4">All the classes &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">playground.FourthClass</td><td><a href="#m1">class4method1</a></td><td rowspan="1">1584961801465</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="1">playground.SecondClass</td><td><a href="#m2">class2method1</a></td><td rowspan="1">1584961801459</td><td rowspan="1">2</td></tr><tr class="passedeven"><td rowspan="1">playground.ThirdClass</td><td><a href="#m3">class3method2</a></td><td rowspan="1">1584961801423</td><td rowspan="1">19</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">playground.primaClasa#class1method2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
-Parameter &apos;test&apos; is required by @Test on method class1method2 but has not been marked @Optional or defined
-in C:\Users\Florin\AppData\Local\Temp\testng-eclipse-349595345\testng-customsuite.xml
-	at org.testng.internal.Parameters.createParams(Parameters.java:289)
-	at org.testng.internal.Parameters.createParametersForMethod(Parameters.java:377)
-	at org.testng.internal.Parameters.createParameters(Parameters.java:721)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:895)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:762)
-	at org.testng.internal.ParameterHandler.handleParameters(ParameterHandler.java:60)
-	at org.testng.internal.ParameterHandler.createParameters(ParameterHandler.java:39)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:771)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:145)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+<h2>All the classes</h2><h3 id="m0">playground.FirstClass#class1method1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: did not expect to find [true] but found [false]
+	at playground.FirstClass.class1method1(FirstClass.java:41)
 	at java.util.ArrayList.forEach(Unknown Source)
-	at org.testng.TestRunner.privateRun(TestRunner.java:770)
-	at org.testng.TestRunner.run(TestRunner.java:591)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:402)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:396)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:355)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:304)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1180)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1102)
-	at org.testng.TestNG.runSuites(TestNG.java:1032)
-	at org.testng.TestNG.run(TestNG.java:1000)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">playground.primaClasa#class1method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>2ndUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>firstUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">playground.primaClasa#class1method3</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>3rdUsername</td><td>password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">playground.primaClasa#class1method4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">playground.FourthClass#class4method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">playground.SecondClass#class2method1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">playground.ThirdClass#class3method2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
